tests/baselines/reference/nonPrimitiveInFunction.errors.txt
nonPrimitiveInFunction.ts(12,12): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'object'.
nonPrimitiveInFunction.ts(12,12): error TS2454: Variable 'primitive' is used before being assigned.
nonPrimitiveInFunction.ts(13,1): error TS2322: Type 'object' is not assignable to type 'boolean'.
nonPrimitiveInFunction.ts(17,5): error TS2322: Type 'number' is not assignable to type 'object'.


==== nonPrimitiveInFunction.ts (4 errors) ====
    function takeObject(o: object) {}
    function returnObject(): object {
        return {};
    }
    
    var nonPrimitive: object = {};
    var primitive: boolean;
    
    takeObject(nonPrimitive);
    nonPrimitive = returnObject();
    
    takeObject(primitive); // expect error
               ~~~~~~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'object'.
               ~~~~~~~~~
!!! error TS2454: Variable 'primitive' is used before being assigned.
    primitive = returnObject(); // expect error
    ~~~~~~~~~
!!! error TS2322: Type 'object' is not assignable to type 'boolean'.
    
    function returnError(): object {
        var ret = 123;
        return ret; // expect error
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'object'.
    }
    